Add MergedDataTable and data merge

--- a/Main.xaml
+++ b/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap:VirtualizedContainerService.HintSize="999,1666" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:sc="clr-namespace:System.Collections;assembly=mscorlib" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap:VirtualizedContainerService.HintSize="999,1666" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -77,10 +77,12 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Check the invoices issued to bankruptcy clients&#xD;&#xA;&#xD;&#xA;Check which of the invoices in an Excel file were issued to clients in bankruptcy and calculate the sum of the invoices to be recorded as loss.&#xD;&#xA;&#xD;&#xA;Input files:&#xD;&#xA;&#xD;&#xA;Invoices (.xlsx)&#xD;&#xA;Clients (.csv)&#xD;&#xA;&#xD;&#xA;--------&#xD;&#xA;&#xD;&#xA;File: RPADev-S04P02-CalculatingLossInvoices-Clients.csv&#xD;&#xA;Headers &amp; First Row:&#xD;&#xA;ClientID ClientName IsBankrupt&#xD;&#xA;1 Unit&amp;Products Inc. TRUE&#xD;&#xA;Sheet Name: RPADev-S04P02-CalculatingLossIn&#xD;&#xA;&#xD;&#xA;File: RPADev-S04P02-CalculatingLossInvoices-Invoices.xlsx&#xD;&#xA;Headers &amp; First Row:&#xD;&#xA;InvoiceID ClientName InvoiceValue&#xD;&#xA;1 Unit&amp;Products Inc. 100&#xD;&#xA;Sheet Name: Sheet1" DisplayName="Sequence Main" sap:VirtualizedContainerService.HintSize="476,1394" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Check the invoices issued to bankruptcy clients&#xD;&#xA;&#xD;&#xA;Check which of the invoices in an Excel file were issued to clients in bankruptcy and calculate the sum of the invoices to be recorded as loss.&#xD;&#xA;&#xD;&#xA;Input files:&#xD;&#xA;&#xD;&#xA;Invoices (.xlsx)&#xD;&#xA;Clients (.csv)&#xD;&#xA;&#xD;&#xA;--------&#xD;&#xA;&#xD;&#xA;File: RPADev-S04P02-CalculatingLossInvoices-Clients.csv&#xD;&#xA;Headers &amp; First Row:&#xD;&#xA;ClientID ClientName IsBankrupt&#xD;&#xA;1 Unit&amp;Products Inc. TRUE&#xD;&#xA;Sheet Name: RPADev-S04P02-CalculatingLossIn&#xD;&#xA;&#xD;&#xA;File: RPADev-S04P02-CalculatingLossInvoices-Invoices.xlsx&#xD;&#xA;Headers &amp; First Row:&#xD;&#xA;InvoiceID ClientName InvoiceValue&#xD;&#xA;1 Unit&amp;Products Inc. 100&#xD;&#xA;Sheet Name: Sheet1" DisplayName="Sequence Main" sap:VirtualizedContainerService.HintSize="476,1317" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="custTable" />
       <Variable x:TypeArguments="sd:DataTable" Name="custInvoiceTable" />
+      <Variable x:TypeArguments="sd:DataTable" Name="mergedDataTable" />
+      <Variable x:TypeArguments="x:String" Name="outputString" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -133,51 +135,62 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:ExcelApplicationScope>
-    <ui:ForEach x:TypeArguments="x:Object" CurrentIndex="{x:Null}" sap2010:Annotation.AnnotationText="//Temporary activities to validate the read into the data tables is correct." DisplayName="For Each" sap:VirtualizedContainerService.HintSize="434,391" sap2010:WorkflowViewState.IdRef="ForEach`1_1">
-      <ui:ForEach.Body>
-        <ActivityAction x:TypeArguments="x:Object">
-          <ActivityAction.Argument>
-            <DelegateInArgument x:TypeArguments="x:Object" Name="item" />
-          </ActivityAction.Argument>
-          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="272,215" sap2010:WorkflowViewState.IdRef="Sequence_4">
-            <Sequence.Variables>
-              <Variable x:TypeArguments="x:String" Name="outputString" />
-            </Sequence.Variables>
-            <sap:WorkflowViewStateService.ViewState>
-              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              </scg:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-            <ui:OutputDataTable DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="230,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_3">
-              <ui:OutputDataTable.DataTable>
-                <InArgument x:TypeArguments="sd:DataTable">
-                  <mca:CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_9">custTable</mca:CSharpValue>
-                </InArgument>
-              </ui:OutputDataTable.DataTable>
-              <ui:OutputDataTable.Text>
-                <OutArgument x:TypeArguments="x:String">
-                  <mca:CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_4">outputString</mca:CSharpReference>
-                </OutArgument>
-              </ui:OutputDataTable.Text>
-            </ui:OutputDataTable>
-            <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_2">
+    <ui:JoinDataTables DisplayName="Join Data Tables" sap:VirtualizedContainerService.HintSize="434,59" sap2010:WorkflowViewState.IdRef="JoinDataTables_1" JoinType="Inner">
+      <ui:JoinDataTables.Arguments>
+        <scg:List x:TypeArguments="ui:JoinOperationArgument" Capacity="4">
+          <ui:JoinOperationArgument Operand="{x:Null}" BooleanOperator="And" Operator="EQ">
+            <ui:JoinOperationArgument.Column1>
               <InArgument x:TypeArguments="x:String">
-                <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_8">outputString</mca:CSharpValue>
+                <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_41">"ClientName"</mca:CSharpValue>
               </InArgument>
-            </WriteLine>
-          </Sequence>
-        </ActivityAction>
-      </ui:ForEach.Body>
-      <ui:ForEach.Values>
-        <InArgument x:TypeArguments="sc:IEnumerable">
-          <mca:CSharpValue x:TypeArguments="sc:IEnumerable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_10">custTable.Rows</mca:CSharpValue>
+            </ui:JoinOperationArgument.Column1>
+            <ui:JoinOperationArgument.Column2>
+              <InArgument x:TypeArguments="x:String">
+                <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_42">"ClientName"</mca:CSharpValue>
+              </InArgument>
+            </ui:JoinOperationArgument.Column2>
+          </ui:JoinOperationArgument>
+        </scg:List>
+      </ui:JoinDataTables.Arguments>
+      <ui:JoinDataTables.DataTable1>
+        <InArgument x:TypeArguments="sd:DataTable">
+          <mca:CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_37">custInvoiceTable</mca:CSharpValue>
         </InArgument>
-      </ui:ForEach.Values>
+      </ui:JoinDataTables.DataTable1>
+      <ui:JoinDataTables.DataTable2>
+        <InArgument x:TypeArguments="sd:DataTable">
+          <mca:CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_38">custTable</mca:CSharpValue>
+        </InArgument>
+      </ui:JoinDataTables.DataTable2>
+      <ui:JoinDataTables.OutputDataTable>
+        <OutArgument x:TypeArguments="sd:DataTable">
+          <mca:CSharpReference x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpReference`1_12">mergedDataTable</mca:CSharpReference>
+        </OutArgument>
+      </ui:JoinDataTables.OutputDataTable>
+    </ui:JoinDataTables>
+    <Sequence DisplayName="Temporary Printing" sap:VirtualizedContainerService.HintSize="434,215" sap2010:WorkflowViewState.IdRef="Sequence_7">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-    </ui:ForEach>
+      <ui:OutputDataTable DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="230,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_3">
+        <ui:OutputDataTable.DataTable>
+          <InArgument x:TypeArguments="sd:DataTable">
+            <mca:CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_40">mergedDataTable</mca:CSharpValue>
+          </InArgument>
+        </ui:OutputDataTable.DataTable>
+        <ui:OutputDataTable.Text>
+          <OutArgument x:TypeArguments="x:String">
+            <mca:CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_4">outputString</mca:CSharpReference>
+          </OutArgument>
+        </ui:OutputDataTable.Text>
+      </ui:OutputDataTable>
+      <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_2">
+        <InArgument x:TypeArguments="x:String">
+          <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_44">outputString</mca:CSharpValue>
+        </InArgument>
+      </WriteLine>
+    </Sequence>
   </Sequence>
 </Activity>
